CAMBIOS EN INSUMOS Y ADD INSUMOS A TRATAMIENTOS
AQUIÍ EL BACKUP NÚMERO 68 CON MIS CAMBIOS AGREGUÉ INSUMOS A LOS TRATAMIENTOS AÚN FALTA REVISAR ALGUNOS, TENGO PROBLEMAS EN INSUMOS EN MI ELIMINAR ME REDIRIGE A UNA LISTA VACÍA DE INSUMOS, Y EN MI MODIFICAR NO MODIFICA LA UNIDAD UNITARIA QUE AGREGUÉ NUEVO, LES PEDIRÉ AYUDA CON ESO EN UNA REUNIÓN, ADEMÁS AÚN NO PUSE LAS CANTIDADES UNITARIAS A CADA INSUMO DE TRATAMIENTO PORQUE JUSTAMENTE NO PUEDO MODIFICAR LA UMIDAD DE MEDIDA UNITARIA DEL INSUMO.

--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/agregar_cantidad_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/agregar_cantidad_insumos.html
@@ -35,7 +35,7 @@
                         {% csrf_token %}
                         <center>
                             <h5>
-                                <b>¡Ingrese la cantidad en {{insumo.unidad}}!:</b>
+                                <b>¡Ingrese la cantidad unitaria del Insumo<!-- {{insumo.ud_unitaria}} -->!:</b>
                             </h5>
                         </center>
                         <br>
