--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/agregar_insumo.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/agregar_insumo.html
@@ -75,6 +75,12 @@
                                                             {{form.stock_minimo}} </p>
                                                         </div>
                                                     <br>
+                                                    <div class="form-group">
+                                                        <p>
+                                                            <label for="{{form.ud_unitaria.name}}">{{form.ud_unitaria.label}}</label></p>
+                                                            {{form.ud_unitaria}} </p>
+                                                        </div>
+                                                    <br>
                                                     </Table>
 
                                 </div> 
