--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
@@ -57,10 +57,10 @@
                                 <th>Nombre </th>
                                 <th>Costo Unitario</th>  
                                 <!-- <th>Fecha de Caducidad</th>  -->
-                                <th>Cantidad Insumo</th>
-                                <!-- <th>Unidad por Paquete, Caja o Litro</th> -->
-                                <th>Cantidad Unitaria</th>
-                                <th>Unidad de Medida</th> 
+                                <th>Cant. Insumo</th>
+                                <th>Ud. de Medida</th> 
+                                <th>Ud. por Paq. Caja o Litro</th>
+                                <th>Cant. Unitaria</th>
                                 <!-- <th>Estado</th>  -->
                                 <th colspan="2"><center>Acciones</center>  </th>
                             </tr>
@@ -74,8 +74,9 @@
                                     <td>{{c.precio}} Gs.</td> 
                                     <!-- <td>{{c.fecha_caducidad}}</td>  -->
                                     <td>{{c.cantidad_insumo}}</td> 
-                                    <td>{{c.cantidad_unitaria}}</td> 
                                     <td>{{c.unidad}}</td> 
+                                    <td>{{c.unidad_x_paquete}}</td> 
+                                    <td>{{c.cantidad_unitaria}}</td> 
                                     <!-- <td>{{c.estado}}</td>  -->
                                     {{busqueda}}
                                     <!--OPCIONES Modificar y Eliminar-->
