--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/modificar_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/modificar_insumos.html
@@ -74,6 +74,12 @@
                             <br>
                             <div class="form-group">
                                 <p>
+                                    <label for="{{form.ud_unitaria.name}}">{{form.ud_unitaria.label}}</label></p>
+                                    {{form.ud_unitaria}} </p>
+                                </div>
+                            <br>
+                            <div class="form-group">
+                                <p>
                                     <label for="{{form.stock_minimo.name}}">{{form.stock_minimo.label}}</label></p>
                                     {{form.stock_minimo}} </p>
                                 </div>
