Correcion al Agregar y agendar cita

--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendario_mensaje.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/calendario_mensaje.html
@@ -33,7 +33,7 @@
                         <td>
                            
                            
-                            <a href="/agendamiento/calendar" class="btn btn-info">
+                            <a href="/agendamiento/calendario_usuario" class="btn btn-info">
                                 <i class="bi bi-calendar"></i>
                                 Ver Calendario <br>
                             </a>
