--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/usuario_changeCita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/usuario_changeCita.html
@@ -4,15 +4,11 @@
 
 {%load static%}
 
-
 {% block javascripts%}
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-     
 
 {%endblock%}
 <!--Cuadro de DIALOGO DE ELIMINAR-->
-
-
 
 {%block content%}
 
@@ -51,7 +47,7 @@
                             </div> 
                             <br>
                             <div class="form-group">
-                            <label for="profesional"><b> Elegir al Profesional: </label> 
+                            <label for="profesional"><b> Odontologo: </label> 
                                 {{profesional}}</b>
                             </div>
                             <br>
