--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita_usuario.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita_usuario.html
@@ -7,30 +7,22 @@
 
 {% block javascripts%}
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-     
 
 {%endblock%}
-<!--Cuadro de DIALOGO DE ELIMINAR-->
-
-
 
 {%block content%}
-  
-
   {%if perms.gestion_agendamiento.change_cita%}
     <div class="container">
         <div class="card">
             <div class="card-body">
                 <center> 
-                        
-                    <h2 <i class="bi bi-calendar"></i> Modificar | Cita</i> </h2><br>
+                    <h2> <i class="bi bi-calendar"></i> Modificar | Cita</i> </h2><br>
                     <center><h5> <b>Paciente:</b> <i>{{persona.nombre}} {{persona.apellido}}</i> </h5></center>
                     <div class="alert alert-success " role="alert">
                         <small> 
-                         <b>Fecha de nacimiento:</b> <i>{{persona.fecha_nacimiento}} </i>
+                            <b>Fecha de nacimiento:</b> <i>{{persona.fecha_nacimiento}} </i>
                         </small>
                     </div>
-
                 </center>
               
                
