--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_pendientes.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_pendientes.html
@@ -18,9 +18,9 @@
                      </h2>
                 </center>
                
-                <strong>  <FONT COLOR="blue" style="font-size: 1.0rem" > &nbsp;  Filtro por fecha</FONT> </strong>
+                <!-- <strong>  <FONT COLOR="blue" style="font-size: 1.0rem" > &nbsp;  Filtro por fecha</FONT> </strong> -->
                     <!--Barra de Busqueda Por Fecha-->
-                <form  class="form-inline" method="POST">
+                <!-- <form  class="form-inline" method="POST">
                     {% csrf_token %}
 
                 
@@ -28,20 +28,18 @@
                         <br><input type="date" name="f"  class="form-control bg-light border-0 small "  aria-label="search" value="{{request.POST.filtro}}" >
                         <br>
                             {% comment %} Buscar por fecha: <input type="date" name="f" > {% endcomment %}
-                        <!--<input type="submit" value="{{request.POST.buscar}}" />-->
                         <div class="input-group-append">
                             <button  class="btn btn-outline-primary my-2 my-sm-0" type="submit" value="{{request.POST.buscar}}">
-                                <!--ICONO LUPA-->
                                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                                 </svg>
                             </button>
                         </div>
                     </div>
-                </form>
+                </form> -->
                 <br>
                                 <!--Barra de Busqueda Por nombre-->
-                <strong>  <FONT COLOR="blue" style="font-size: 1.0rem" > &nbsp; Odontólogo</FONT> </strong>
+                <!-- <strong>  <FONT COLOR="blue" style="font-size: 1.0rem" > &nbsp; Odontólogo</FONT> </strong>
                 <form  class="form-inline" method="POST">
                     {% csrf_token %}
                     <div class="input-group">
@@ -49,7 +47,6 @@
                         <br>
                         <div class="input-group-append">
                             <button  class="btn btn-outline-primary my-2 my-sm-0" type="submit" >
-                                <!--ICONO LUPA-->
                                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                                 </svg>
@@ -57,7 +54,7 @@
                         </div>
                     </div>
                 </form>
-                <br>
+                <br> -->
                         
                 <!--end-->
                 <br>
