modificacion en inventario

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
@@ -101,7 +101,7 @@
                     </table>
                     <div class="d-flex justify-content-center">
                         {%if tratamientos_agendados%}
-                        <a type="submit" href="#" class="btn btn-secondary btn-block txt-white">
+                        <a type="submit" href="/cobros/detalle_cobro_pdf/{{persona.paciente.id_paciente}}" class="btn btn-secondary btn-block txt-white">
                             <i class="bi bi-printer"></i>
                             Detalle previo
                         </a>
