--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/agregar_cantidad_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/agregar_cantidad_insumos.html
@@ -16,7 +16,7 @@
     <center>
         <FONT size="5" > 
             <b>INSUMO: </b>
-            <b style="color:blue;">{{tratamiento_insumo_asignado.insumo.nombre_insumo}}x</b> 
+            <b style="color:blue;">{{tratamiento_insumo_asignado.insumo.nombre_insumo}} </b> 
         </FONT>
     </center>
     <br>
