--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/asignar_insumo.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/asignar_insumo.html
@@ -17,7 +17,8 @@
                         <br>
                         <center>
                             <h3>
-                                <b>Insumos para el tratamiento de: </b> <b style="color:blue; font-size:25px;" ><td>{{ tratamiento.nombre_tratamiento }}</b><!--  {{tratamiento.codigo_tratamiento.precio}}--> </td></i>
+                                <b>Insumos para el tratamiento de: </b> <b style="color:blue; font-size:25px;" >
+                                <td>{{ tratamiento.nombre_tratamiento }}</b></td>
                             </h3>
                         </center>
                         
@@ -37,7 +38,7 @@
                         </button>
                         <a onclick="history.back()" class="btn btn-danger" style="margin: 10px;">
                             <i class="bi-x-circle"></i>
-                            Atras
+                            Atrás
                         </a>
                     </div>
                     <hr>
