--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -408,7 +408,7 @@
                                                    
                                                  <!--Opcion 11.2 -->
                                                  
-                                                     <li><a class="dropdown-item" href="/insumo/listar_insumo/">• Lista de Insumos</li></a>
+                                                     <li><a class="dropdown-item" href="/insumo/listar_insumos/">• Lista de Insumos</li></a>
                                                     {%endif%}
                                                      <!-- <li><a class="dropdown-item" href="/tratamiento/asignar_tratamiento/">• Asignar Tratamiento a paciente</li></a>
                                                          <div class="dropdown-divider"></div>  -->
