--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/invitado.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/invitado.html
@@ -111,7 +111,7 @@
         
             <div class="row section recentworks topspace">
                 
-                <h2 class="section-title"><span>Planes Familiares | Cuotas individuales </span></h2>
+                <h2 class="section-title"><span>Mejora tu sonrisa </span></h2>
                 
                 <div class="thumbnails recentworks row">
                     
@@ -122,17 +122,14 @@
                                 
                                 <span class="cover"><span class="more">Detalles &rarr;</span></span>
                             </span>
-                           <span class="title"><b>Plan Frenillo</b></span>
+                           <span class="title"><b>Brackets</b></span>
                                 <p>
-                                        100% Aparato / frenillo<br>
-                                        100% Mantenimiento incluido<br>
-                                        100% En todas las consultas<br>
-                                        Blanqueamiento Estético<br>
-                                        80% de cobertura en tratamientos<br>
-                                        Colocación de aparato en 2 cuotas<br>
+                                        Aparato / frenillo<br>
+                                        Mantenimiento & Chequeos mensuales<br>
+                                      
                                 </p>
                         </a>
-                        <span class="details">Planes individuales | A cuotas | Al contado</span>
+                        {% comment %} <span class="details">Planes individuales | A cuotas | Al contado</span> {% endcomment %}
                         <h4></h4>
                         <p></p>
                     </div>
@@ -144,7 +141,7 @@
                                 
                                 <span class="cover"><span class="more">Detalles &rarr;</span></span>
                             </span>
-                           <span class="title"><b>Plan Familiar</b></span>
+                           {% comment %} <span class="title"><b>Plan Familiar</b></span> {% endcomment %}
                                 <p>
                                         Extracciones <br>
                                         Urgencias Odontológicas<br>
@@ -154,10 +151,10 @@
                                         Restauraciones <br>
                                         Blanqueamientos<br>
                                         Radiografías<br>
-                                        80% de cobertura en implantes, prótesis, endodoncia y otras
+                                        Cobertura en implantes, prótesis, endodoncia y otras
                                 </p>
                         </a>
-                        <span class="details">Plan familiar | A cuotas </span>
+                        {% comment %} <span class="details">Plan familiar | A cuotas </span> {% endcomment %}
                         <h4></h4>
                         <p></p>
                     </div>
@@ -174,9 +171,9 @@
                                         Chequeo de caries <br>
                                         Inspección en general<br>
                                 </p>
-                                <h3> 50% menos </h3>
+                                {% comment %} <h3> 50% menos </h3>
                         </a>
-                        <span class="details">Promociones & Descuentos</span>
+                        <span class="details">Promociones & Descuentos</span> {% endcomment %}
                         <h4></h4>
                         <p></p>
                     </div>
