--- a/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
@@ -46,7 +46,7 @@
                                 <tr>
                                     <td >{{forloop.counter}}</td>
                                     <td >{{t.tratamiento.nombre_tratamiento}}</td>
-                                    <td >{{t.tratamiento.precio}}</td>
+                                    <td >{{t.tratamiento.precio}} Gs</td>
                                     <td >
                                         <a href="/cobros/eliminar_tratamiento_confirmado/{{t.id_tratamiento_confirmado}}" type="submit" class="btn btn-danger btnEliminacion">
                                             <i class="bi bi-trash3"></i>
