Inicio de implementacion de Facturación

--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_paciente.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_paciente.html
@@ -17,12 +17,22 @@
                     <div style="margin: 20px;" >
                         <table>
                             <div class="form-group">
-                                <b><label for="{{form2.nombre.name}}">{{form2.nombre.label}}</label></b>
+                                <b>
+                                    <label for="{{form2.nombre.name}}">
+                                        {{form2.nombre.label}}
+                                        <!-- <span class="icon-required" style="color: red;">*</span> -->
+                                    </label>
+                                </b>
                                 {{form2.nombre}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <b><label for="{{form2.apellido.name}}">{{form2.apellido.label}}</label></b>
+                                <b>
+                                    <label for="{{form2.apellido.name}}">
+                                        {{form2.apellido.label}}
+                                        <!-- <span class="icon-required" style="color: red;">*</span> -->
+                                    </label>
+                                </b>
                                 {{form2.apellido}}
                             </div>
                             <br>
