--- a/Proyecto2/SmileSoft/gestion_cobros/templates/listar_cobro_contado.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/listar_cobro_contado.html
@@ -50,15 +50,16 @@
 				
 				<table class="table table-striped table-hover">
 					<thead style="border: 1cm;">
-						<tr>
-							<th>Nro</th>
-							<th>Numero de documento</th>
-							<th>Nombre y apellido</th>
-							<th>Fecha</th>
-                            <th>Monto total</th>
-							<th>Acciones</th>
-						</tr>
-						
+						{% if listado_cobros %}
+							<tr>
+								<th>Nro</th>
+								<th>Numero de documento</th>
+								<th>Nombre y apellido</th>
+								<th>Fecha</th>
+								<th>Monto total</th>
+								<th>Acciones</th>
+							</tr>
+						{% endif %}
 					</thead>
 						<tbody>
 							{% if listado_cobros %}
@@ -81,7 +82,14 @@
 							{% endfor %}
 							
 							{% else %}
-							<h1>No hay registros de cobros realizados</h1>
+							<br>
+							<h3 align="center" >
+								<i class="bi bi-exclamation-circle-fill" style="color: red;"></i>
+								<i class="bi bi-currency-exchange" style="color: green;"></i>
+							</h3>
+							<h5 align="center">
+								<b>No se han encontrado registros</b> 
+							</h5>
 							{% endif %}
 						</tbody>
 				</table> 
