--- a/Proyecto2/SmileSoft/gestion_cobros/templates/ver_detalle_cobro.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/ver_detalle_cobro.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 	<!-- {%if perms.gestion_administrativo.view_especialistasalud%} -->
-		<div class="container">
+		<div class="container" style="width: 70%;">
 			<div class="card">
 				<div class="card-body">
 					<center>  <h2> <i class="bi bi-ticket-detailed"></>Detalle del Cobro realizado</i></h2> </center>
@@ -14,13 +14,15 @@
                         {{cobro.paciente.numero_documento.nombre}} {{cobro.paciente.numero_documento.apellido}}
                     </h4>
                 </center> -->
-                <h6>
-                    <b>Razón social: </b>{{cobro.razon_social}}
-                </h6>
-                <h6>
-                    <b>Número de cédula/RUC: </b>{{cobro.numero_documento}}
-                </h6>
-                <h6><b>Fecha: </b>{{cobro.fecha}}</h6>
+                <div>
+					<h6>
+						<b>Paciente: </b>{{cobro.razon_social}}
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						<b>Número de documento </b>{{cobro.numero_documento}}
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						<b>Fecha: </b>{{cobro.fecha}}
+					</h6>
+				</div>
 				<br>
 				<table class="table table-striped table-hover">
 					<thead style="border: 1cm;">
@@ -50,12 +52,17 @@
 				</table>
 				<br>
 				<hr>
-				<center>
+				<div align="center">
+					<a  href="/cobros/ingresar_datos_factura/{{cobro.id_cobro_contado}}" class="btn btn-primary">
+						<i class="bi bi-printer"></i> 
+						Factura
+				   </a>
+				   &nbsp;&nbsp;
 					<a  onclick="history.back()" class="btn btn-secondary">
 						 <i class="bi bi-backspace"></i> 
 						 Atrás
-						</a>
-				</center>
+					</a>
+				</div>
 			</div>
 		</div>
 	<!-- {% endif %} -->
